<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/subtitulo_uno"
            android:title="@string/material_design">
            <menu>
                <item
                    android:id="@+id/loginFirebase"
                    android:icon="@drawable/ic_baseline_person_24"
                    android:title="@string/login"/>
                <item
                    android:id="@+id/constraint_layout"
                    android:icon="@drawable/ic_baseline_school_24"
                    android:title="@string/constraint_layout"/>
                <item
                    android:id="@+id/nestedscrollview"
                    android:icon="@drawable/ic_baseline_description_24"
                    android:title="@string/nestedscrollview" />
                <item
                    android:id="@+id/collapsing"
                    android:icon="@drawable/compra"
                    android:title="@string/collapsingtoolbarlayout" />
                <item
                    android:id="@+id/recycler_view"
                    android:icon="@drawable/ic_baseline_format_list_bulleted_24"
                    android:title="@string/recyclerview" />
                <item
                    android:id="@+id/video_viewer"
                    android:icon="@drawable/ic_baseline_play_circle_24"
                    android:title="@string/video_viewer" />
                <item
                    android:id="@+id/sound"
                    android:icon="@drawable/ic_baseline_surround_sound_24"
                    android:title="@string/sound_player" />
            </menu>
        </item>
    </group>
</menu>